--- a/SampleProject/src/main/AndroidManifest.xml
+++ b/SampleProject/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.demo.sampleproject.SaroRetrieval"
+            android:label="@string/title_activity_saro_retrieval" >
+        </activity>
     </application>
 
 </manifest>
